--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
             <p id="positive-msg" class="notify">✅ Pin Matched... Secret door is opening for you</p>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
